--- a/StackCalculator/pom.xml
+++ b/StackCalculator/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>StackCalculator</artifactId>
+    <artifactId>Calculator with annotations</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
