Added all tests

--- a/CalculatorWithAnnotations/src/main/resources/log4j.properties
+++ b/CalculatorWithAnnotations/src/main/resources/log4j.properties
@@ -1,9 +1,4 @@
-log4j.rootLogger=DEBUG, stdout, file
-
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.stdout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n
+log4j.rootLogger=DEBUG, file
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=C:/Users/avdee/nsu_java_labs/CalculatorWithAnnotations/src/main/application.log
